[gd_scene load_steps=44 format=2]

[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/bosses-sprites/minor-boss/mini-hotarus/mini-hotarus-sheet.png" type="Texture" id=1]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/hotaru/hotaru-state-machine.gd" type="Script" id=2]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/hotaru.gd" type="Script" id=3]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/hotaru/Idle.gd" type="Script" id=4]
[ext_resource path="res://game-assets/game-scripts/player-scripts/character-animator.gd" type="Script" id=5]
[ext_resource path="res://game-assets/game-scripts/test-zone-scripts/badniks-scripts/hotaru/stop-to-shoot.gd" type="Script" id=6]
[ext_resource path="res://game-assets/game-sprites/levels-sprites/test-zone-assets/bosses-sprites/minor-boss/mini-hotarus/charging-sprite-sheet.png" type="Texture" id=7]
[ext_resource path="res://game-assets/audio/sfx/power-down.wav" type="AudioStream" id=8]
[ext_resource path="res://game-assets/audio/sfx/test-zone/act-1/bosses/minor-boss/HotaruLaser.wav" type="AudioStream" id=9]
[ext_resource path="res://game-assets/audio/sfx/power-up.wav" type="AudioStream" id=10]
[ext_resource path="res://game-assets/audio/sfx/test-zone/act-1/bosses/minor-boss/HotaruFly.wav" type="AudioStream" id=11]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 72, 86, 36, 43 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 108, 86, 36, 43 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 144, 86, 36, 43 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 0, 129, 36, 43 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 36, 43 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 36, 0, 36, 43 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 72, 0, 36, 43 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 36, 43 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 36, 43 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 43, 36, 43 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 36, 43, 36, 43 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 72, 43, 36, 43 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 108, 43, 36, 43 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 144, 43, 36, 43 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 0, 86, 36, 43 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 36, 86, 36, 43 )

[sub_resource type="SpriteFrames" id=17]
animations = [ {
"frames": [ SubResource( 15 ), SubResource( 16 ) ],
"loop": true,
"name": "StandingUp",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "Charge",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "JustVibing",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "Prepared",
"speed": 5.0
} ]

[sub_resource type="Animation" id=22]
resource_name = "ChangingPose"
length = 0.125
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "StandingUp" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=18]
resource_name = "Charging"
length = 0.125
loop = true
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Charge" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=19]
resource_name = "FlippingLying"
length = 0.375
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "JustVibing" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25, 0.3125 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=20]
resource_name = "FlippingStand"
length = 0.3125
step = 0.0625
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Prepared" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.0625, 0.125, 0.1875, 0.25 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=23]
resource_name = "IdleLying"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "JustVibing" ]
}

[sub_resource type="Animation" id=26]
resource_name = "IdleStandCenter"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Prepared" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 2 ]
}

[sub_resource type="Animation" id=25]
resource_name = "IdleStandLeft"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Prepared" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=24]
resource_name = "IdleStandRight"
length = 0.001
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Prepared" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 4 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "JustVibing" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 7 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 7 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 7 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 7 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=32]
animations = [ {
"frames": [ SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[node name="MiniHotaru" type="KinematicBody2D"]
script = ExtResource( 3 )

[node name="FSM" type="Node" parent="."]
script = ExtResource( 2 )
initial_state = "Rounding"

[node name="Rounding" type="Node" parent="FSM"]
script = ExtResource( 4 )

[node name="StopToShoot" type="Node" parent="FSM"]
script = ExtResource( 6 )

[node name="Character" type="Node2D" parent="."]

[node name="Sprite" type="AnimatedSprite" parent="Character"]
frames = SubResource( 17 )
animation = "JustVibing"

[node name="CharacterAnimator" type="AnimationPlayer" parent="Character/Sprite"]
anims/ChangingPose = SubResource( 22 )
anims/Charging = SubResource( 18 )
anims/FlippingLying = SubResource( 19 )
anims/FlippingStand = SubResource( 20 )
anims/IdleLying = SubResource( 23 )
anims/IdleStandCenter = SubResource( 26 )
anims/IdleStandLeft = SubResource( 25 )
anims/IdleStandRight = SubResource( 24 )
anims/RESET = SubResource( 21 )
script = ExtResource( 5 )

[node name="BeamCharge" type="AnimatedSprite" parent="Character/Sprite"]
visible = false
show_behind_parent = true
position = Vector2( -12, -7 )
frames = SubResource( 32 )
frame = 1
centered = false

[node name="StandingUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
bus = "SFX"

[node name="ShootCharge" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
pitch_scale = 3.0
bus = "SFX"

[node name="Shoot" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"

[node name="Appear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
bus = "SFX"

[connection signal="animation_finished" from="Character/Sprite/CharacterAnimator" to="FSM" method="_on_CharacterAnimator_animation_finished"]
[connection signal="animation_started" from="Character/Sprite/CharacterAnimator" to="FSM" method="_on_CharacterAnimator_animation_started"]
